<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#EAEAEA"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/lnameinput"
        android:layout_width="348dp"
        android:layout_height="45dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="Last name "
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/emailinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnameinput"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/emailinput"
        android:layout_width="348dp"
        android:layout_height="43dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnameinput"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/fnameinput"
        android:layout_width="341dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="First name "
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lnameinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="30dp"
        android:text=" Create an Account "
        android:textColor="#020202"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/fnameinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/switchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="80dp"
        android:text="Create Your Account"
        android:textColorHint="#000000"
        app:backgroundTint="#673AB7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organisationinput"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/employerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:text="  Employer "
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/organisationinput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordinput"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/organisationinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="Bussiness name"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/switchbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employerId"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/employeeCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/employerId"
        app:layout_constraintTop_toBottomOf="@+id/passwordinput"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/employeeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="27dp"
        android:text="Employee"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/organisationinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/employerId"
        app:layout_constraintTop_toBottomOf="@+id/passwordinput" />

    <EditText
        android:id="@+id/passwordinput"
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailinput" />

</androidx.constraintlayout.widget.ConstraintLayout>