...
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="dont_have_an_account">Dont have an Account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="EMPTY_STRING">\"\"</string>
    <string name="TITLE">" Create an Account  "</string>
    <string name="SIGNUPBUTTON">" Create your Account"</string>
    <string name="location">location</string>
    <string name="phone_number">phone_number</string>
    <string name="upload_your_resume">upload_your_resume</string>
    <string name="apply">apply</string>
    <string name="home">home</string>
    <string name="last_name">last_name</string>
...
